--- a/style.css
+++ b/style.css
@@ -1,23 +1,125 @@
-h1 {
-    text-align: center;
-    font-size: 5em;
-    margin-top: 4%;
-    font-family: 'Lobster', cursive;
-    color: #322fd4;
+#name
+{
+  font-size: 50px;
+  text-align: center;
 }
-.row{
-    margin-top: 5%;
+#iname{
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: -26px;
+  margin-top: -46px;
 }
-.btn{
-    margin-top: 2%;  
+#para{
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: -16px;
+  margin-top: 26px;
 }
-.card-body {
-    display: flex;
-    justify-content: center;
+.card-title{
+  text-align: center;
 }
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
+#space {
+  margin-top: 26px;
+}
+.center{
+  display: block;
+  margin-right: auto;
+  width: 25%;
+}
+.col{
+  text-align: justify;
+}
+.container{
+  width: 100%;
+  height: 100%;
+  background-color: #f2f2f2;
+}
+.about{
+  font-size: 20px;
+  text-align: justify;
+  margin-top: 20px;
+}
+.colg{
+  text-align: left;
+}
+p {
+  margin-right: 25%;
+  margin-left: 25%;
+}
+.me{
+  width: 15%;
+  height: 15%;
+  border-radius: 50%;
+  display: block;
+  margin: auto;
+}
+.icons{
+  padding-left: 25%;
+  display: block;
+  margin: auto;
+}
+.heads{
+  font-size: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+.mainme{
+  display:block;
+  background-position: center;
+  margin:100px auto;
+  width:200px;
+  border-radius: 50%;
+  border:1px solid black;
+}
+.cenfoot{
+  text-align: center;
+}
+.bbt{
+  background-position: center;
+  margin:100px auto;
+  width:100px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: -26px;
+  margin-top: 30px;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
   }
+  /* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+  /* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{
+  padding: 0px;
+}
+.descp{
+  font-size: 20px;
+  text-align: center;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
