--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -1,48 +1,39 @@
-body{
-    padding-top: 25px;
-    font-family: 'Roboto', sans-serif;
+body {
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-h1{
-    color: black;
-    text-align: center;    
-}
-.nav{
-    color: black;
-}
-.mainI{
-    display:block;
-    background-position: center;
-    margin:100px auto;
-    width:400px;
-}
-.btns{
-    display: block;
+#board {
+    width: 450px;
+    height: 450px;
+    /* background-color: gray; */
     margin: 0 auto;
-    width: 400px;
-    text-align: center;
-}
-#space {
-    margin-top: 30px;
-}
-.box{
-    border: 6px solid #000000;
-    border-radius: 2px;
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 4em;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
 }
-.board
-{
-	width: 600px;
-	height: 600px;
-	margin: 0 auto;
-    background-color: #ffffff;
-    color: #fff;
-    border-radius: 10px;
-	display: grid;
-	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+#space{
+    margin-bottom: 2%;
+}
+.tile {
+    width: 147px;
+    height: 147px;
+    
+    /* Text */
+    font-size: 150px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+}
+
+.winner {
+    background-color: lightgray;
+    color: red;
+}
+
+
+.horizontal-line {
+    border-bottom: 3px solid black;
+}
+
+.vertical-line {
+    border-right: 3px solid black;
 }
