--- a/wordle/style.css
+++ b/wordle/style.css
@@ -29,9 +29,22 @@
     color: rgb(26, 230, 84);
     text-transform: uppercase;
 }
- hr{
+hr{
     width: 425px;
+}
+#restart{
+    font-size: 20px;
+    font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+    letter-spacing: 3px;
+    margin-top: 2%;
+    width: 250px;
 } 
+button:hover{
+    background-color: rgb(248, 0, 0);
+    color: white;
+    cursor: pointer;
+}
 #game{
     width:320px;
     height: 420px;
@@ -43,7 +56,7 @@
     margin-left: 1%;
     width: 50px;
     height:50px;
-    border: 2px solid black;
+    border: 2px solid rgb(74, 72, 72);
     margin-bottom: 3%;
     margin-right: 3%;
 }
