--- a/wordle/style.css
+++ b/wordle/style.css
@@ -3,6 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+h3 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
+    letter-spacing: 3px;
+    margin-top: 2%;
+    color:white;
+}
 #heads{
     margin-top: 2%;
     font-size: 40px;
