--- a/photo-album/style.css
+++ b/photo-album/style.css
@@ -11,6 +11,7 @@ h1 {
     background: #000;
     margin-top: 10px;
     margin-bottom: 5px;
+	font-family: monospace;
 }
 body{
 	background-color: #dbddf1;
